# auv-2014

./: .gitignore  .gitmodules  .vimrc  CV_DOWN_NODE_INFO.txt  CV_LEFT_NODE_INFO.txt  Doxygen_Configuration_for_McGill_Robotics  README.md  Setting_up_front_end.txt  git_is_nice.txt  test.txt  topiclst  upload.sh
Underwater-Simulator/: .gitignore  CMakeLists.txt  README.md
Underwater-Simulator/launch/: Underwater-Simualtor.launch~  move_model.launch~  test_camera.launch
Underwater-Simulator/models/: BIN.color.dae  Blue-buoy.color.dae  Green-buoy.color.dae  Green-buoy.dae  Obstacle 1.00.dae  Path.color.dae  Path.dae  Pizzabox.dae  Red-buoy.color.dae  Red-buoy.dae  Torpedo-targets.color.dae  Traffic-light.dae  Wall_Wheel_Task.dae  Wheel_Disconnected.dae  Yellow-buoy.dae  bin.dae  empty_world_with_model.world  gate.dae  lever.dae  lightRobot.dae  small_wall.dae  small_wall1.01.dae  torpedo.dae  torpedoTargets.dae  wheelTask.dae
Underwater-Simulator/src/: launch_torpedo.cc  move_model.cc  robot.cc
Underwater-Simulator/worlds/: Underwater-Simulator.world
catkin_ws/src/camera_switch/: CMakeLists.txt  package.xml
catkin_ws/src/camera_switch/src/: camera_switch.cpp
catkin_ws/src/computer_vision/: CMakeLists.txt  cameraNodeSpecificParameters.yaml  computerVisionParameters.yaml  package.xml  simulationEnvironmentSpecificParameters.yaml
catkin_ws/src/computer_vision/config/: cvBase.yaml  gate.yaml  realitySpecific.yaml  simulationSpecific.yaml
catkin_ws/src/computer_vision/include/: Buoy.h  CVNode.h  CVTestNode.h  Camera.h  CameraNode.h  Door.h  DownCVNode.h  DownCameraNode.h  FrontCVNode.h  FrontCameraNode.h  Gate.h  Line.h  LineTarget.h  MarkerTarget.h  ObjectData.h  PlannerSimulator.h  SoftCameraNode.h  VisibleObject.h  distanceCalculator.h  distanceCalculator_backup3-9.h
catkin_ws/src/computer_vision/launch/: .line.launch.swp  calibrate_mono_camera.launch  camera_base.launch  camera_down.launch  camera_front_left.launch  camera_front_right.launch  computer_vision.launch  gate_testing.launch  gazebo_testing.launch  line.launch  mono_odometry_test.launch
catkin_ws/src/computer_vision/msg/: StereoCameraImages.msg  VisibleObjectData.msg
catkin_ws/src/computer_vision/src/: Buoy.cpp  CVNode.cpp  CVTestNode.cpp  Camera.cpp  CameraNode.cpp  Door.cpp  DownCVNode.cpp  DownCameraNode.cpp  FrontCVNode.cpp  FrontCameraNode.cpp  Gate.cpp  Line.cpp  LineTarget.cpp  MarkerTarget.cpp  PlannerSimulator.cpp  SoftCameraNode.cpp  VisibleObject.cpp  distanceCalculator-preTF.cpp  distanceCalculator.cpp  distanceCalculator_backup3-9.cpp
catkin_ws/src/computer_vision/tests/: line_target_test.cpp  marker_target_test.cpp
catkin_ws/src/planner/: CMakeLists.txt  HOW TO TASK.txt  How to run  logger.txt  package.xml
catkin_ws/src/planner/config/: setPoints.yaml
catkin_ws/src/planner/include/: Config.h  Interface.h  Invoker.h  Loader.h  Lost_Gate.h  Lost_Lane.h  Planner.h  StatusUpdater.h  Task.h  Task.hpp  TaskConcrete.hpp  TaskFactory.hpp  Task_Gate.h  Task_Handler.h  Task_Kill.h  Task_Lane.h  distanceCalculator.h  interface.h  planner.h  rosTest.h  tasks.xml
catkin_ws/src/planner/include/latex/: annotated.tex  classConfig.tex  classInvoker.tex  classLoader.tex  classTask.eps  classTask.tex  classTaskFactory.tex  classTask__1v1.eps  classTask__1v1.tex  classTask__1v2.eps  classTask__1v2.tex  classTask__2v1.eps  classTask__2v1.tex  classTask__Gate.eps  classTask__Gate.tex  classTorpedoTask.eps  classTorpedoTask.tex  classrosTest.tex  doxygen.sty  hierarchy.tex  refman.tex
catkin_ws/src/planner/launch/: README.txt  planner.launch  planner_cv.launch  planner_cv.xml  planner_full_real.launch  planner_full_sim.launch  planner_node.launch  planner_setup_real.launch  planner_setup_sim.launch  plannerless.launch  real-full-planner.launch  real-setup-planner.launch  sim-full-planner.launch  sim-setup-planner.launch  startup-sequence.launch
catkin_ws/src/planner/msg/: CVQuery.msg  Depth.msg  MotorControl.msg  Num.msg  currentCVTask.msg  setPoints.msg
catkin_ws/src/planner/src/: CVTest.cpp  CVTest.h  Config.cpp  CurrentCVTaskPublisher.cpp  Interface.cpp  Interface.h  Invoker.cpp  Loader.cpp  Lost_Gate.cpp  Lost_Lane.cpp  Planner.cpp  Planner2.cpp  StatusUpdater.cpp  Task.cpp  TaskConcrete.cpp  TaskFactory.cpp  Task_Buoy.cpp  Task_Gate.cpp  Task_Guide.cpp  Task_Handler.cpp  Task_Kill.cpp  Task_Lane.cpp  distanceCalculator.cpp  distanceCalculator.h  interface.cpp  logger.txt  makefile  planner.cpp  quick_parse.cpp  rosTest.cpp
catkin_ws/src/planner/src/TaskLoader/: Loader.cpp  Loader.h  TaskConcrete.hpp  taskC  (+3 more)
catkin_ws/src/planner/xml/: tasks.xml
catkin_ws/src/pose_ukf/: CMakeLists.txt  package.xml
catkin_ws/src/pose_ukf/include/: pose_ukf.h  ukf.h
catkin_ws/src/pose_ukf/src/: QuaternionUtils.py  RotationVectorUtils.py  matrix_utils.cpp  matrix_utils.h  pose_ukf  pose_ukf.cpp  ros_pose.cpp  rotation_vector_utils.cpp  ukf.cpp  ukf.h  ukf.py
catkin_ws/src/pose_ukf/test/: test_RotationVectorUtils.py  test_ukf.cpp  test_ukf.py
catkin_ws/src/pose_ukf/test_data/: acc.csv  gyro.csv  test1.bag
catkin_ws/src/robosub_config/: CMakeLists.txt  package.xml
catkin_ws/src/robosub_config/config/: ports.yaml  topics.yaml
catkin_ws/src/robosub_msg/: CMakeLists.txt  package.xml
catkin_ws/src/robosub_msg/launch/: arduino.launch  teensy.launch
catkin_ws/src/robosub_msg/msg/: CurrentCVTask.msg  ValueControl.msg  motor.msg
catkin_ws/src/simulator/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/simulator/include/: launch_torpedo.h  robot.h
catkin_ws/src/simulator/launch/: simulator.launch
catkin_ws/src/simulator/msg/: ThrusterForces.msg
catkin_ws/src/simulator/src/: create_torpedo.cc  launch_torpedo.cc  robot.cc  tf_broadcaster_simulator.cpp
catkin_ws/src/simulator/test/: test_robot.cc
catkin_ws/src/simulator/worlds/: bin_task.world  simulator.world
catkin_ws/src/system_test/: CMakeLists.txt  package.xml
catkin_ws/src/system_test/include/: hardware_test.h
catkin_ws/src/system_test/launch/: runSystemTest.launch
catkin_ws/src/system_test/src/: hardware_test.cpp
(+2456 files in other folders)
