<?xml version="1.0"?>
<package>
  <name>computer_vision</name>
  <version>0.0.0</version>
  
  <description>
  The computer vision package used for McGill Robotics: Robosub Team
  </description>
  
  <maintainer email="jean-sebastien.dery@mail.mcgill.ca">Jean-Sebastien Dery</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <url type="website">http://mcgillrobotics.com/</url>
  
  <!-- Members of the Computer Vision Section for the 2013-2014 year. -->
  <author email="jean-sebastien.dery@mail.mcgill.ca">Jean-Sebastien Dery</author>
  <author email="renaud.jacques-dagenais@mail.mcgill.ca">Renaud Jacques-Dagenais</author>
  <author email="haris.haidary@mail.mcgill.ca">Haris Haidary</author>
  <author email="mnoseworthy7@gmail.com">Michael Noseworthy</author>
  <author email="lafrancef@gmail.com">Frederic Lafrance</author>
  <author email="dimitrios.gallos@mail.mcgill.ca">Dimitri Gallos</author>
  <author email="alek42008@yahoo.com">Aleksi Sapon</author>
  <author email="jlat2830@gmail.com">Joel Lat</author>
  <author email="uehtesham90@gmail.com">Usman Ehtesham Gul</author>
  <author email="thuy-anh.le@mail.mcgill.ca">Thuy-Anh Le</author>
  <author email="yoann@battyani.com">Yoann Battyani</author>

  <!-- This will allow ROS to generate the custom ROS Message type for different languages (C++, Python, etc.) -->
  <build_depend>message_generation</build_depend>
  <!-- This will allow ROS to use the generated custom ROS Message type during runtime by this and other packages. -->
  <run_depend>message_runtime</run_depend>

  <!-- Package's dependencies. -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>robosub_msg</build_depend>
  <build_depend>planner</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>robosub_msg</run_depend>
  <run_depend>planner</run_depend>
</package>
