<?xml version="1.0"?>
<package>
  <name>system_test</name>
  <version>0.0.0</version>
  <description>The system_test package used to test different components of the robot.</description>

  <maintainer email="jean-sebastien.dery@mail.mcgill.ca">jdery</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>